Prevent elements from moving when the scrollbar appears

--- a/src/vs/workbench/contrib/positronConnections/browser/components/schemaNavigation.css
+++ b/src/vs/workbench/contrib/positronConnections/browser/components/schemaNavigation.css
@@ -14,6 +14,7 @@
 	cursor: pointer;
 	align-items: center;
 	height: 26px;
+	scrollbar-gutter: stable;
 }
 
 .connections-details {
@@ -88,6 +89,7 @@
 	text-overflow: ellipsis;
 	white-space: nowrap;
 	width: calc(100% - 2px);
+	scrollbar-gutter: stable;
 }
 
 .connections-instance-details .connection-name {
